--- a/03.ipynb
+++ b/03.ipynb
@@ -970,13 +970,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10, 2, 5, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "lst=[2,5,9,-10]\n",
     "lst.sort()\n",
@@ -995,13 +1003,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 5, 2, -10]\n"
+     ]
+    }
+   ],
    "source": [
     "lst.sort(reverse=True)\n",
     "print(lst)"
@@ -1019,13 +1035,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Air', 'Earth', 'Fire', 'Water']\n",
+      "['Water', 'Fire', 'Earth', 'Air']\n"
+     ]
+    }
+   ],
    "source": [
     "names.sort()\n",
     "print(names)\n",
@@ -1159,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1172,13 +1197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 4, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "listb = lista[:]\n",
     "print(listb)"
@@ -1186,13 +1219,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 4]\n",
+      "[2, 1, 4, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "lista.pop()\n",
     "print(lista)\n",
@@ -1202,13 +1244,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 4, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "print(listb)"
    ]
