--- a/03.ipynb
+++ b/03.ipynb
@@ -970,21 +970,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-10, 2, 5, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "lst.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "lst=[2,5,9,-10]\n",
     "lst.sort()\n",
@@ -1003,21 +1006,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[9, 5, 2, -10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lst.sort(reverse=True)\n",
     "print(lst)"
@@ -1035,22 +1030,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Air', 'Earth', 'Fire', 'Water']\n",
-      "['Water', 'Fire', 'Earth', 'Air']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names.sort()\n",
     "print(names)\n",
@@ -1184,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1197,21 +1183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 1, 4, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "listb = lista[:]\n",
     "print(listb)"
@@ -1219,22 +1197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 1, 4]\n",
-      "[2, 1, 4, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lista.pop()\n",
     "print(lista)\n",
@@ -1244,21 +1213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 1, 4, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(listb)"
    ]
@@ -1294,8 +1255,7 @@
     "editable": true
    },
    "source": [
-    "## \n",
-    "Tuples"
+    "## Tuples"
    ]
   },
   {
