--- a/05.ipynb
+++ b/05.ipynb
@@ -419,13 +419,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]\n"
+     ]
+    }
+   ],
    "source": [
     "res = []\n",
     "for i in range(1,11):\n",
@@ -446,13 +454,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[27*x for x in range(1,11)]"
    ]
@@ -514,15 +533,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "So why do people like list comprehensions more than for-loops? First, because it is less typing work, but second, and most importantly, it is because list comprehensions are actually faster than the list append code. This is since the append code is called in each step of the for-loop, causing the array to grow (dynamically). With the list comprehension, python gathers all elements together, before assigning the result in one go to the new variable, which makes this faster - especially for larger lists!"
+   ]
   }
  ],
  "metadata": {
