added xlsx-reading example

--- a/NumpyMatplotlib.ipynb
+++ b/NumpyMatplotlib.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Numpy: Ouch\n",
     "What is the difference between the two types of code?"
@@ -12,7 +15,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -29,7 +34,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Matplotlib\n",
     "\n",
@@ -42,7 +50,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -66,7 +76,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -93,6 +105,73 @@
     "plt.imshow()\n",
     "\n",
     "# and we should not forget to show the figure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Reading xlsx-files\n",
+    "\n",
+    "Reading in files and converting the data to something usable is one of the most important tasks in data mining and machine learning. In this little exercise, you get to read in data from an Excel file using the **pandas** library. If you don't have it already, just do\n",
+    "\n",
+    "``pip3 install pandas xlrd``\n",
+    "\n",
+    "The file is in ``data/stats_example.xlsx`` and contains summarized data from an eye-tracking experiment in which participants had to look at six different slides (0-5) in two conditions (blue and normal). We measured their eye movements and extracted information about saccades (4 different measures) and fixations (2 different measures).\n",
+    "\n",
+    "Please open it in Excel (or OpenOffice) and have a look. As you can see, it has tons of information about different participants. It starts out with summarized information that is gathered from the data below. Starting in row 112, the data that I am interested in, begins.\n",
+    "\n",
+    "Each row contains 9 values:\n",
+    "* subject (participant name)\n",
+    "* slidenr (0-5)\n",
+    "* datatype (sac or fix)\n",
+    "* variable (dur, len, vel, acc for sac | dur, disp for fix)\n",
+    "* condition (blue or normal)\n",
+    "* min\tQ1\tmedian\tQ3\tmax (5-number summary for the data)\n",
+    "\n",
+    "Your task in this exercise will be to read in the file and give me the average median fixation duration of all 34 participants.\n",
+    "\n",
+    "Note that the file contains \"NaNs\" - you need to deal with them (remember how in Matlab??)\n",
+    "\n",
+    "There are two main ways to do this, and I want you to implement BOTH:\n",
+    "\n",
+    "1) the hackish way using the sorted data in the excel-file: for this, simply take a look at the excel data and check which of the rows correspond to fixation durations\n",
+    "\n",
+    "2) the \"proper\" way using the power of **pandas**: for this, note that **pandas** gives you a new data structure, a **DataFrame** as the result of the import command. This data structure has a very useful function called **query()**. Check out the help for this function and design the proper query that gets you the fixation durations. This is by far the most powerful method!\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "# do we need more imports?\n",
+    "\n",
+    "# read in excel file\n",
+    "file = pandas.read_excel('data/stats_example.xlsx') # this will need to be changed\n",
+    "\n",
+    "# the average median fixation duration is around 190ms\n",
+    "# there are two main ways to get this information:\n",
+    "#     1. the hackish way using the indices in the file\n",
+    "#        if you take a look at the excel file, you can\n",
+    "#       see that the conditions are sorted regularly\n",
+    "\n",
+    "print('Mean fixation duration using hackish way is ',) # result of first hackish way\n",
+    "\n",
+    "#     2. the \"good\" way using the power of pandas query()\n",
+    "#        command. Take a look at the help and design a\n",
+    "#        proper query that gets you the information\n",
+    "\n",
+    "print('Mean fixation duration using panda query() is ',) # result of first hackish way\n"
    ]
   },
   {
