added another timing example

--- a/debugAndJudge.ipynb
+++ b/debugAndJudge.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Debug and judge"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Let's try to do a few easy things so that you can practice what you have learned.\n",
     "\n",
@@ -30,7 +36,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -51,7 +59,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now, let's use the **reduce( )** function for this in connection with a **lambda** function that we define on the elements. **reduce( )** uses two inputs: first, a function and, second, the data that the function is applied to. The end-result will be one single, reduced element that is the result of the function on the data. \n",
     "\n",
@@ -62,7 +73,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -71,7 +84,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Once you have this corrected, let me give you an example of the use of **reduce( )**"
    ]
@@ -80,7 +96,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -89,14 +107,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "So the lambda function has two inputs x and y that come from the repeated application of reduce on the array. The \"previous\" result is x and the \"current\" input y is added to x in each step. So this is equivalent to a for-loop that goes through the list and adds all elements. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Back to our example! We now need to define a lambda function that takes each element of our data array and produces a multiplication. Correct the following example:"
    ]
@@ -105,7 +129,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -114,7 +140,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "We would like to know whether it is actually better to run reduce than to run the for-loop. So let's time the two things. For this, we will use the IPython utility function **timeit** that I showed you a few times already. We will also define a new array of data, which is a little larger."
    ]
@@ -123,7 +152,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -137,7 +168,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Alright, now let's time the for-loop. For this, we put this in a function that we call once in order to get the array multiplied. "
    ]
@@ -146,7 +180,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -163,9 +199,52 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Can you interpret the result? Which method is faster??"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# More timing - loops\n",
+    "\n",
+    "In python, general lists can iterated over in several different ways. Just to see how things go, expand the following code to time the three functions I have defined below that show three different types of iteration.\n",
+    "\n",
+    "```\n",
+    "def pythonFor(a):\n",
+    "\tfor index, item in enumerate(a): tmp1,tmp2 = index, item\n",
+    "\t\n",
+    "def cFor(a):\n",
+    "\tfor i in range(len(a)): tmp1,tmp2 = i, a[i]\n",
+    "\t\n",
+    "def numpyFor(a):\n",
+    "\tfor i in np.arange(len(a)): tmp1,tmp2 = i, a[i]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def pythonFor(a):\n",
+    "    for index, item in enumerate(a): tmp1,tmp2 = index, item\n",
+    "def cFor(a):\n",
+    "    for i in range(len(a)): tmp1,tmp2 = i, a[i]\n",
+    "def numpyFor(a):\n",
+    "    for i in np.arange(len(a)): tmp1,tmp2 = i, a[i]"
    ]
   },
   {
