added some more pointers to useful information

--- a/resources.ipynb
+++ b/resources.ipynb
@@ -52,6 +52,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some hidden features of python\n",
+    "\n",
+    "These are explored in this quora question:\n",
+    "\n",
+    "https://www.quora.com/What-are-some-hidden-features-of-Python\n",
+    "\n",
+    "And this stackoverflow question (incidentally, this webpage will most likely contain answers to any programming question you may have!):\n",
+    "\n",
+    "http://stackoverflow.com/questions/101268/hidden-features-of-python"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
