added some info

--- a/dataMining_1_2.ipynb
+++ b/dataMining_1_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -150,7 +150,9 @@
     "\n",
     "`1,14.23,1.71,2.43,15.6,127,2.8,3.06,.28,2.29,5.64,1.04,3.92,1065`\n",
     "`1,13.2,1.78,2.14,11.2,100,2.65,2.76,.26,1.28,4.38,1.05,3.4,1050`\n",
-    "`...`"
+    "`...`\n",
+    "\n",
+    "The first column is the wine type, and the following columns are the 13 features."
    ]
   },
   {
@@ -329,7 +331,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Wait a second! These do **not** seem orthogonal! What happened?\n",
     "\n",
@@ -340,7 +345,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -352,7 +359,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Seaborn\n",
     "Python has an abundance of helper packages for visualization, plotting, data analysis, etc.\n",
@@ -370,7 +380,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -381,7 +393,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "What seaborn shows here is:\n",
     "* the cumulative histograms on the diagonal for each of the three labels\n",
@@ -397,6 +412,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -410,7 +427,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Actually, we can see a lot of correlations in our dataset. For example, V4 with V5 \"only\" has 0.44, but V7 with V8 has 0.86. This means that the dataset has a lot of redundancies.\n",
     "\n",
@@ -421,17 +441,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "# this is not necessary, but I want to use some numpy-stuff later\n",
-    "pcaData = np.array(X)\n",
-    "pcaDataM = pcaData.mean(axis=0)\n",
-    "pcaDataS = pcaData.std(axis=0)\n",
     "# standardize the data - this is necessary to avoid problems with\n",
     "# different measurement scales!!\n",
-    "pcaDataStd = (pcaData-pcaDataM)/pcaDataS\n",
+    "pcaDataStd = (X-X.mean())/X.std()\n",
     "# construct PCA method\n",
     "bigPCA = PCA()\n",
     "# fit it to data using default parameters\n",
@@ -450,7 +468,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "There are multiple ways to decide now how many components to keep. With this plot, we can try to keep as many components so that we can still explain 80% of the variance. In this case, this would be 5 components.\n",
     "\n",
@@ -461,7 +482,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -491,11 +514,128 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "And, lo and behold, we can actually see a nice separation of the three wine types in this plot - in fact, most of the separability is done by the first and the second dimension.\n",
     "\n",
     "We can therefore see how exploiting correlations can help to find patterns and perhaps aid in clustering as well!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DIY - IRIS flowers\n",
+    "\n",
+    "Now, let's go to the IRIS dataset and do our analysis here as well.\n",
+    "\n",
+    "First, we load the IRIS dataset into memory from scikit (actually seaborn has that as well, but we will use scikit's version here) and convert it into a pandas DataFrame for use with seaborn.\n",
+    "\n",
+    "The scikit IRIS version has several fields:\n",
+    "\n",
+    "* iris.feature_names: a list of the four features along which Fisher measured the flowers\n",
+    "* iris.data: an array containing the values of the four features for each flower\n",
+    "* iris.target: an integer-coded array telling us which flower it is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import datasets\n",
+    "# load the IRIS dataset\n",
+    "iris = datasets.load_iris()\n",
+    "\n",
+    "iris\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, now we want to stick that data into a pandas DataFrame and show the pairplot with seaborn similarly to the WINE example from above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# what are the names of the features?\n",
+    "fnames = iris...\n",
+    "\n",
+    "# let's convert to pandas DataFrame and name\n",
+    "# the columns according to the feature names\n",
+    "data = pandas.DataFrame(iris...,columns=...)\n",
+    "\n",
+    "# the DataFrame should also contain the target values\n",
+    "# so, we should add them here in a column named \"Y\"\n",
+    "# luckily, extending a dataFrame is easy in pandas:\n",
+    "data[\"Y\"] = pandas.DataFrame(...)\n",
+    "\n",
+    "# show the pairplot of all variables\n",
+    "# since seaborn by default plots all NUMERIC columns,\n",
+    "# it would plot the \"Y\"-column as well, so we need to\n",
+    "# pass the \"vars\" argument to restrict plotting to the\n",
+    "# feature columns only\n",
+    "sb.pairplot(...,vars=...,hue=...,kind=\"reg\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have loaded everything and checked that there are, indeed, some correlations, let's apply PCA to all the data to exploit those correlations. \n",
+    "\n",
+    "We can simply follow the recipe for the WINE data from above for doing these analyses:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# construct PCA method\n",
+    "irisPCA = ...\n",
+    "\n",
+    "# standardize our data (only the actual numeric data)\n",
+    "dataStd = ...\n",
+    "\n",
+    "# fit PCA to data \n",
+    "irisPCA.fit(...)\n",
+    "\n",
+    "# now project data onto these dimensions:\n",
+    "dataTrans = irisPCA.transform(dataStd)\n",
+    "\n",
+    "# now convert the result back into DataFrame for the first two dimensions\n",
+    "dataToPlot = pandas.DataFrame(...,columns=[\"Dim1\",\"Dim2\"])\n",
+    "\n",
+    "# add the IRIS flowers\n",
+    "dataToPlot[\"Y\"]=data[\"Y\"]\n",
+    "\n",
+    "# and plot the result using seaborn without regression\n",
+    "sb.lmplot(x=\"Dim1\",y=\"Dim2\",data=dataToPlot,hue=\"Y\",fit_reg=False)\n",
+    "plt.show()\n",
+    "# we want to know how much variance we can explain - this is contained\n",
+    "# somewhere in irisPCA...\n",
+    "plt.title(\"Two dimensions explain {:.2f}% of variance\".format(...))"
    ]
   },
   {
