added decisionTree and linearRegression

--- a/dataMining_3_4.ipynb
+++ b/dataMining_3_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 388,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 389,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -28,6 +28,54 @@
    "source": [
     "# read in our data - taking care to check that it is tab-delimited!\n",
     "data = pandas.read_csv('data/dataWeather.txt',delimiter='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 403,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Outlook</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Windy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Outlook  Temperature  Humidity  Windy\n",
+       "0      0.0          0.0       0.0    0.0"
+      ]
+     },
+     "execution_count": 403,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "err=pandas.DataFrame(np.zeros((1,4)),columns=data.columns[:-1])\n",
+    "err"
    ]
   },
   {
@@ -45,13 +93,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 404,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outlook : if Sunny --> No 2 errors\n",
+      "Outlook : if Overcast --> Yes 0 errors\n",
+      "Outlook : if Rainy --> Yes 2 errors\n",
+      "Temperature : if Hot --> Yes 2 errors\n",
+      "Temperature : if Mild --> Yes 2 errors\n",
+      "Temperature : if Cool --> Yes 1 errors\n",
+      "Humidity : if High --> No 3 errors\n",
+      "Humidity : if Normal --> Yes 1 errors\n",
+      "Windy : if False --> Yes 2 errors\n",
+      "Windy : if True --> Yes 3 errors\n",
+      "\n",
+      "\n",
+      "\n",
+      "    Outlook  Temperature  Humidity  Windy\n",
+      "0      4.0          5.0       4.0    5.0\n",
+      "\n",
+      "\n",
+      "\n",
+      "found minimum error for attribute Outlook\n"
+     ]
+    }
+   ],
    "source": [
     "# this will hold the errors that I make for each attribute\n",
     "err=pandas.DataFrame(np.zeros((1,4)),columns=data.columns[:-1])\n",
@@ -111,13 +185,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 405,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outlook \n",
+      "            No       Yes\n",
+      "Sunny     0.6  0.222222\n",
+      "Overcast    0  0.444444\n",
+      "Rainy     0.4  0.333333 \n",
+      "\n",
+      "\n",
+      "Temperature \n",
+      "        No       Yes\n",
+      "Hot   0.4  0.222222\n",
+      "Mild  0.4  0.444444\n",
+      "Cool  0.2  0.333333 \n",
+      "\n",
+      "\n",
+      "Humidity \n",
+      "          No       Yes\n",
+      "High    0.8  0.333333\n",
+      "Normal  0.2  0.666667 \n",
+      "\n",
+      "\n",
+      "Windy \n",
+      "         No       Yes\n",
+      "False  0.4  0.666667\n",
+      "True   0.6  0.333333 \n",
+      "\n",
+      "\n",
+      "No : 0.0205714285714\n",
+      "Yes : 0.00529100529101\n"
+     ]
+    }
+   ],
    "source": [
     "# Naive Bayes implementation\n",
     "# let's make a dictionary of dataFrames for the storage\n",
