--- a/dataMining_4_LinearRegression.ipynb
+++ b/dataMining_4_LinearRegression.ipynb
@@ -301,6 +301,16 @@
    "source": [
     "We observe that the $R^2$-value is much higher now (at 0.74), meaning that the additional variables help in increasing the linear predictability of the house prices.\n",
     "\n",
+    "But is that really surprising? I mean after all instead of giving the algorithm two features (including the intercept) to predict a value, we are now giving it 14! So we have a **lot** more power. In fact, this power may also cause problems, as we are perhaps doing too much. \n",
+    "\n",
+    "## Adjusted $R^2$\n",
+    "\n",
+    "People have therefore come up with a way to correct the $R^2$-value depending on the number of feature dimensions:\n",
+    "\n",
+    "$R^2_{adj} = R^2 - \\frac{p}{n-p-1}(1-R^2)$ with $p$ being number of feature dimensions and $n$ being the number of samples.\n",
+    "\n",
+    "In our case, $R^2_{adj} = 0.734$\n",
+    "\n",
     "Also, apparently Nitric Oxides (\"NOX\") have a **huge** negative effect on housing prices. Or do they? \n",
     "\n",
     "## DIY: improve the interpretability of the linear regression\n",
